kubernetes/apps/linkding/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:1.40.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 2m
              memory: 256Mi
            limits:
              memory: 256Mi
      restartPolicy: Always
