kubernetes/apps/linkding/app/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-private
  namespace: linkding
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkding.homelab-peej.dev
      secretName: linkding-internal-tls-secret
  rules:
    - host: linkding.homelab-peej.dev
      http:
        paths:
          - backend:
              service:
                name: linkding
                port:
                  number: 9090
            path: /
            pathType: Prefix
